--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactReviewWithPokemon",
+  "name": "reactReviewPictureCollection",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,9 +16,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/omegak911/reactReviewWithPokemon/issues"
+    "url": "https://github.com/omegak911/reactReviewPictureCollection/issues"
   },
-  "homepage": "https://github.com/omegak911/reactReviewWithPokemon#readme",
+  "homepage": "https://github.com/omegak911/reactReviewPictureCollection#readme",
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
